possibility to save the polygons introduced